--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "expo": "~37.0.3",
+    "expo-constants": "~9.0.0",
+    "expo-location": "~8.1.0",
+    "expo-permissions": "~8.1.0",
     "firebase": "7.9.0",
     "install": "^0.13.0",
     "node-pre-gyp": "^0.14.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-google-maps": "^9.4.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-maps": "^0.27.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
